syntax = "proto3";
package etcd_bridge;
option go_package = ".;etcdbridgeproto"; // 替换为您的实际包路径
import "server_info.proto";


message SyncConf{
  int64 id=1;
  int64 source_server_id=2;
  int64 target_server_id=3;
  int32 status=4;
  ServerInfo source_server=5;
  ServerInfo target_server=6;
  string watcher_key = 7;
  int64 sync_all_time=8;
}
message SaveSyncConfRequest{
  int64 id=1;
  int64 source_server_id=2;
  int64 target_server_id=3;
  int32 status=4;
  string watcher_key = 5;
  int64 sync_all_time=6;
}
message DelSyncConfRequest{
  int64 id=1;
}
message GetSyncConfRequest {
  int64 id = 1;
}
message SyncConfListRequest {
  string search_key = 1;
  int64 page = 2;
  int64 page_size = 3;
}
message SyncConfListResponse {
  repeated  SyncConf data = 1;
  int64 total = 2;
}
message SyncConfActionRequest {
  int64 id = 1;
  int64 status = 2;
}